# polars-zarr

./: README.md  pyproject.toml
.github/workflows/: tests.yml
rust/: Cargo.toml
rust/src/: io.rs  lib.rs
src/polars_zarr/: __init__.py
tests/: conftest.py  test_scan_zarr.py
