[package]
name = "polars_zarr"
version = "0.1.0"
edition = "2021"
description = "Polars plugin for reading and writing zipped Zarr files"
license = "MIT"

[lib]
name = "polars_zarr"
crate-type = ["rlib"]

[dependencies]
polars = { version = "0.46", features = ["lazy", "dtype-struct", "dtype-categorical"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "2.2", package = "zip" }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
